--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+.cartIcon {
+  color:rgba(255, 255, 255, 0.55);
+  font-size: 40px;
+  margin-right: 10px;
+}
+
+.navbar-toggler {
+  border: none;
+  box-shadow: none;
+
+}
+
+.navbar-toggler:focus{
+  border: none;
+  box-shadow: none;
+}
+
 .App {
   text-align: center;
 }
