--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -1,6 +1,11 @@
 .Item--Container{
     display: flex;
     flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 79vh;
 }
 
 
