--- a/src/components/Cart/CartItem.css
+++ b/src/components/Cart/CartItem.css
@@ -1,28 +1,98 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: content-box;
+  margin: 0;
+  padding: 0;
 }
 
-
-.CartItem--Container{
-    width: 100%;
-    min-height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    column-gap: 60px;
-    margin: 15px;
-
+.cartContainer {
+  background-image: url(../../Assets/img/Background.jpg);
+  padding: 15px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-
-.CartItem--Container > div{
-    display: flex;
-    justify-content: center;
-    width: 200px;
-    height: 100%;
-    align-items: center;
-    overflow: hidden;
+.cartContainer > p {
+  font-size: 22px;
+  margin: 0 auto;
 }
 
+.cartContainerEmpty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 5rem;
+}
+
+.cartTitle {
+  text-align: center;
+  padding: 3rem;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  font-size: 60px;
+  font-style: italic;
+  background-color: transparent;
+}
+
+.cartItem {
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  column-gap: 60px;
+  margin: 10px 0;
+  border: 2px solid white;
+  border-radius: 15px;
+ 
+}
+
+.cartItem > div {
+  height: 20vh;
+  width: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cartItem > div > .cartItemImg {
+  height: 100%;
+  width: 100%;
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+
+.cartItem > p {
+  font-size: 20px;
+  min-width: 120px;
+  text-align: center;
+  font-family: inherit;
+  font-weight: 500;
+}
+
+.cartContainer button {
+  margin: 1rem auto;
+  min-width: 100px ;
+}
+
+.btn {
+  background-color: #bec7c4;
+  color: #020101;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-style: normal;
+  text-decoration: none;
+  padding: 16px 39px;
+  border: 0px solid #000;
+  border-radius: 12px;
+  display: inline-block;
+  box-shadow: 0px 5px 10px 1px
+    rgba(177.28218111031242, 178.50001215934753, 178.09406847633585, 0.5);
+}
+.btn:hover {
+  background-color: #dfe2e1;
+}
+.btn:active {
+  transform: scale(0.95);
+}
