--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -1,79 +1,93 @@
-.Item--Container{
+.itemListContainer {
+    background:url(../../Assets/img/Background.jpg);
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.itemList {
     display: flex;
     flex-wrap: wrap;
-    display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.card {
+    width: 18rem;
+    height: 24rem;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+    color: #000000;
+    box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
+    margin: 1rem;
+}
+
+.card img {
+    position: absolute;
+    object-fit: cover;
     width: 100%;
-    height: 79vh;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.9;
+    transition: opacity 0.2s ease-out;
 }
 
-
-.Card{
-    width: 200px;
-    height: fit-content;
-    border-radius: 5px;
-    margin: 15px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #ac9292c2;
-
+.card h2 {
+    position: absolute;
+    inset: auto auto 30px 30px;
+    margin: 0;
+    transition: inset 0.3s 0.3s ease-out;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: normal;
+    text-transform: uppercase;
 }
 
-
-.Card--Img{
-    width: 150px;
-    height: 150px;
-    object-fit: scale-down;
-    margin: 5px;
-
+.card p, .card a {
+    position: absolute;
+    opacity: 0;
+    max-width: 80%;
+    transition: opacity 0.3s ease-out;
+    font-weight: 300;
 }
 
-
-.Card--Body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.card > .card-content > p:nth-child(3) {
+    inset: auto auto 10px 30px;
+    font-style: italic;
+    font-size: 20px;
 }
 
-
-.Card--Body > .Card--Title{
-    text-align: center;
-    height: 60px;
-    font-family: 'Quicksand', sans-serif;
-
-}
-
-
-.Card--Body--Link{
-    text-decoration: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    color: black;
-    background-color: rgba(128, 128, 128, 0.61);
-
-}
-
-
-.Card--Body--Link:hover{
-    background-color: rgba(71, 70, 70, 0.61);
-    transform: scale(1.1, 1.1);
+.card > .card-content > p:nth-child(2) {
+    inset: auto auto 80px 30px;
     font-weight: 400;
 }
 
-
-.Card--Text > .Card--Text--Secondary{
-    display: block;
-    font-weight: 600;
-    font-size: 20px;
-
+.card a {
+    inset: auto auto 60px 30px;
+    color: inherit;
+    text-decoration: none;
+    font-weight: 400;
 }
 
-.Card--Text > .Card--Text--Secondary--Last {
-    display: block;
-    margin-top: 10px;
+.card:hover h2 {
+    inset: auto auto 220px 30px;
+    transition: inset 0.3s ease-out;
+}
 
+.card:hover p, .card:hover a {
+    opacity: 1;
+    transition: opacity 0.5s 0.1s ease-in;
+}
+
+.card:hover img {
+    transition: opacity 0.3s ease-in;
+    opacity: 1;
+}
+
+.material-symbols-outlined {
+    vertical-align: middle;
 }
