--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -1,10 +1,10 @@
 .itemListContainer {
     background:url(../../Assets/img/Background.jpg);
-    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 71vh;
 }
 
 .itemList {
