--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -4,9 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background:transparent;
+  background:url(../../Assets/img/Background.jpg);
 }
-
 
 .lds-roller {
   display: inline-block;
